Environment is now 1.15.2. Everything is broken. Don't bother building.

--- a/MidnightMod/src/main/resources/META-INF/mods.toml
+++ b/MidnightMod/src/main/resources/META-INF/mods.toml
@@ -1,4 +1,3 @@
-
 modLoader="javafml" #mandatory
 loaderVersion="[32,)" #mandatory
 issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues" #optional
@@ -7,13 +6,13 @@ issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues" #optio
 modId="midnight" #mandatory
 version="${file.jarVersion}" #mandatory
 displayName="The Midnight" #mandatory
-updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/1.16.1/versioninfo/update.json" #optional
+updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/rewrite/versioninfo/update.json" #optional
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight" #optional
 logoFile="logo.png" #optional
 #credits="Thanks for this example mod goes to Java" #optional
 authors="Cryptic Mushroom's The Midnight Development Team" #optional
 description='''
-The Midnight has been rewritten from the ground up for Minecraft 1.16.1 and is currently in an unstable alpha. Expect more content soon!
+The Midnight has been rewritten from the ground up for Minecraft 1.15.2 and is currently in an unstable alpha. Expect more content soon!
 
 This mod is a huge collaborative effort with tons of different ideas, coding, and textures pitched in by varying individuals who came together to build something great. We wouldn't be where we are today without the help of those here today and those who worked on this mod in the past.
 
@@ -41,13 +40,13 @@ The Midnight is still in active development and we'd love to hear your feedback!
 [[dependencies.midnight]]
     modId="forge"
     mandatory=true
-    versionRange="[32.0.7,)"
+    versionRange="[31.2.0,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.midnight]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1]"
+    versionRange="[1.15.2]"
     ordering="NONE"
     side="BOTH"
