Use new ptg version and remove fixed TODO

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ allprojects {
     dependencies {
         minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
 
-        embed("net.rgsw:noise:1.0.5") {
+        embed("net.shadew:ptg:1.2.0") {
             // The only transitive dependency is it.unimi.dsi:fastutil:8.2.1 - this is included with forge and we don't
             // need to embed it
             transitive false
@@ -94,11 +94,11 @@ allprojects {
         compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.2.12:api")
         runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.2.12")
 
-        // TODO Add TerraForged API dependency for 1.16.1
+        // TODO Add TerraForged API dependency for 1.15.2
         // compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.1"
         // runtimeOnly fg.deobf("local:TerraForged:1.15.2-0.0.13")
 
-        // TODO Add Biomes O' Plenty dependency for 1.16.1
+        // TODO Add Biomes O' Plenty dependency for 1.15.2
         // compileOnly fg.deobf("local:BiomesOPlenty:1.15.2-10.0.0.345:api")
         // runtimeOnly fg.deobf("local:BiomesOPlenty:1.15.2-10.0.0.345:universal")
     }
