Potential GH Actions fix
https://github.com/MinecraftForge/ForgeGradle/issues/697#issuecomment-671355264

--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -128,7 +128,7 @@ jobs:
         continue-on-error: true
         with:
           gradle-version: 4.10.3
-          arguments: runServer
+          arguments: runServer --max-workers 1
 
       - name: Read server test result
         id: log
