--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ allprojects {
     dependencies {
         minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
 
-        embed("net.shadew:ptg:1+") {
+        embed("net.shadew:ptg:1.2.1") {
             // The only transitive dependency is it.unimi.dsi:fastutil:8.2.1 - this is included with forge and we don't
             // need to embed it
             transitive false
