--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,14 @@ minecraft {
             }
         }
 
+        testServer {
+            workingDirectory project.file('run/server')
+
+            parent minecraft.runs.server
+
+            property 'midnight.istestserver', 'true'
+        }
+
         data {
             workingDirectory project.file('run/data')
 
