Back from the grave. Updated dependencies and mappings version.

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
 
     // ForgeGradle setup
     minecraft {
-        mappings channel: 'snapshot', version: '20200802-1.15.1'
+        mappings channel: 'snapshot', version: '20200921-1.15.1'
 
         // Access transformer
         accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -59,18 +59,27 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+		flatDir {
+            dirs "$rootDir/dependencies"
+        }
+		maven {
+            name = "Cryptic Mushroom Maven Repository"
+            url = "https://maven.crypticmushroom.com/artifactory/jcenter/"
+        }
+		maven {
+            name = "Shadew's Maven Repository"
+            url = "http://maven.shadew.net/"
+        }
 //        maven {
 //            name = "Progwml6 maven"
 //            url = "https://dvs1.progwml6.com/files/maven/"
 //        }
-        flatDir {
-            dirs "$rootDir/dependencies"
-        }
         maven {
             name = "ModMaven"
             url = "https://modmaven.k-4u.nl/"
         }
         maven {
+			name = "TerraForged Maven Repository"
             url "https://io.terraforged.com/repository/maven/"
         }
     }
@@ -92,11 +101,10 @@ allprojects {
             transitive false
         }
 
-        compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.2.12:api")
-        runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.2.12")
+        compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.3.15:api")
+        runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.3.15")
 
-        compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.1"
-        runtimeOnly fg.deobf("local:TerraForged:1.15.2-0.1.2")
+        implementation fg.deobf("local:TerraForged:1.15.2-0.1.2")
 
         compileOnly fg.deobf("local:BiomesOPlenty:1.15.2-10.0.0.366:api")
         runtimeOnly fg.deobf("local:BiomesOPlenty:1.15.2-10.0.0.366:universal")
