--- a/MidnightMod/src/main/resources/META-INF/mods.toml
+++ b/MidnightMod/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[31,)"
+loaderVersion="[34,)"
 issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues"
 
 [[mods]]
@@ -11,14 +11,14 @@ displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
 logoFile="logo.png"
 authors="Cryptic Mushroom's The Midnight Development Team"
 description='''
-The Midnight has been rewritten from the ground up for Minecraft 1.15.2 and is currently in an unstable alpha. Expect more content soon!
+The Midnight has been rewritten from the ground up and is currently in an unstable alpha. Expect more content soon!
 
 This mod is a huge collaborative effort with tons of different ideas, coding, and textures pitched in by varying individuals who came together to build something great. We wouldn't be where we are today without the help of those here today and those who worked on this mod in the past.
 
 The Midnight Development Team Active Developers
 Cipher Zerø X - Project Lead, Mastermind, Modeler
 RedGalaxySW - Lead Programmer
-Jonathing - Lead QA, Community Manager, Programmer
+Jonathing - Lead QA, Community Manager, Programmer, Musician
 
 Active Collaborators
 Lachney - Lead Sound Designer, Lead Musician
@@ -39,13 +39,13 @@ The Midnight is still in active development and we'd love to hear your feedback!
 [[dependencies.midnight]]
     modId="forge"
     mandatory=true
-    versionRange="[31.2.0,)"
+    versionRange="[34.1.0,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.midnight]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2]"
+    versionRange="[1.16.3]"
     ordering="NONE"
     side="BOTH"
