A license and forge is also happy

--- a/MidnightMod/src/main/resources/META-INF/mods.toml
+++ b/MidnightMod/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,7 @@
 modLoader="javafml"
 loaderVersion="[34,)"
-issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues"
+issueTrackerURL = "https://github.com/Cryptic-Mushroom/The-Midnight/issues"
+license = "Custom License, see GitHub"
 
 [[mods]]
 modId="midnight"
@@ -10,14 +11,14 @@ updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/r
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
 logoFile="logo.png"
 authors="Cryptic Mushroom's The Midnight Development Team"
-description='''
+description= '''
 The Midnight has been rewritten from the ground up and is currently in an unstable alpha. Expect more content soon!
 
 This mod is a huge collaborative effort with tons of different ideas, coding, and textures pitched in by varying individuals who came together to build something great. We wouldn't be where we are today without the help of those here today and those who worked on this mod in the past.
 
 The Midnight Development Team Active Developers
 Cipher Zerø X - Project Lead, Mastermind, Modeler
-RedGalaxySW - Lead Programmer
+Shadew - Lead Programmer
 Jonathing - Lead QA, Community Manager, Programmer, Musician
 
 Active Collaborators
