--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,9 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        flatDir {
-            dirs "$rootDir/dependencies"
-        }
-        maven {
-            name = "Cryptic Mushroom Maven Repository"
-            url = "https://maven.crypticmushroom.com/artifactory/jcenter/"
-        }
+//        flatDir {
+//            dirs "$rootDir/dependencies"
+//        }
         maven {
             name = "Shadew's Maven Repository"
             url = "http://maven.shadew.net/"
@@ -118,8 +114,8 @@ allprojects {
 
         // implementation fg.deobf("local:TerraForged:1.15.2-0.1.2")
 
-        compileOnly fg.deobf( "local:BiomesOPlenty:1.16.3-12.0.0.400:api" )
-        compile fg.deobf( "local:BiomesOPlenty:1.16.3-12.0.0.400:universal" )
+        compileOnly fg.deobf( "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:1.16.3-12.0.0.400:api" )
+        compile fg.deobf( "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:1.16.3-12.0.0.400:universal" )
     }
 
     jar {
