--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -57,35 +57,58 @@ jobs:
           cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightCore/${{ secrets.JKS_NAME }}
           cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightMod/${{ secrets.JKS_NAME }}
           rm -rf ${{ secrets.PRIVATE_REPO_NAME }}
+          echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
           echo "Ready to build and sign The Midnight!"
 
     - name: Build The Midnight
       uses: eskatos/gradle-command-action@v1
       with:
         gradle-version: 4.10.3
-        arguments: build
+        arguments: build --no-daemon
+
+    - name: Generate JavaDocs
+      uses: eskatos/gradle-command-action@v1
+      with:
+        gradle-version: 4.10.3
+        arguments: javadoc --no-daemon
 
     - name: Upload The Midnight API to GitHub
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-api-${{ github.sha }}
+        name: midnight-api-${{ env.SHORT_SHA}}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightAPI/build/libs/*.jar
+
+    - name: Upload The Midnight API Documentation to GitHub
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: midnight-api-javadoc-${{ env.SHORT_SHA }}
+        # A file, directory or wildcard pattern that describes what to upload
+        path: MidnightAPI/build/docs/javadoc
 
     - name: Upload The Midnight Core to GitHub
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-core-${{ github.sha }}
+        name: midnight-core-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightCore/build/libs/*.jar
+
+    - name: Upload The Midnight Core Documentation to GitHub
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: midnight-core-javadoc-${{ env.SHORT_SHA }}
+        # A file, directory or wildcard pattern that describes what to upload
+        path: MidnightCore/build/docs/javadoc
 
     - name: Upload The Midnight Client to GitHub
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-client-${{ github.sha }}
+        name: midnight-client-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightMod/build/libs/*client*.jar
 
@@ -93,7 +116,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-server-${{ github.sha }}
+        name: midnight-server-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightMod/build/libs/*server*.jar
 
@@ -101,9 +124,17 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-universal-${{ github.sha }}
+        name: midnight-universal-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightMod/build/libs/*universal*.jar
+
+    - name: Upload The Midnight Documentation to GitHub
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: midnight-javadoc-${{ env.SHORT_SHA }}
+        # A file, directory or wildcard pattern that describes what to upload
+        path: MidnightMod/build/docs/javadoc
 
   test:
 
