Pull requests will now generate JavaDocs

--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -10,6 +10,7 @@ on:
     paths-ignore:
       - '.github/FUNDING.yml'
       - '.github/ISSUE_TEMPLATE/**'
+      - '.github/workflows/rewrite-pr.yml'
       - 'curseforge/**'
       - 'versioninfo/**'
       - 'README.md'
@@ -76,7 +77,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         # Artifact name
-        name: midnight-api-${{ env.SHORT_SHA}}
+        name: midnight-api-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightAPI/build/libs/*.jar
 
