--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -61,17 +61,21 @@ jobs:
           echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
           echo "Ready to build and sign The Midnight!"
 
+    - name: Retrieve any cached dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     - name: Build The Midnight
       uses: eskatos/gradle-command-action@v1
       with:
         gradle-version: 4.10.3
-        arguments: build --no-daemon
-
-    - name: Generate JavaDocs
-      uses: eskatos/gradle-command-action@v1
-      with:
-        gradle-version: 4.10.3
-        arguments: javadoc --no-daemon
+        arguments: build javadoc --no-daemon
 
     - name: Upload The Midnight API to GitHub
       uses: actions/upload-artifact@v2
@@ -154,6 +158,16 @@ jobs:
 
       - name: Set up test server
         run: mkdir run/server; echo "eula=true" >> run/server/eula.txt; echo "Set eula to true."; echo "TEST FAILED" >> run/server/TESTSERVER.txt; echo "Generated TESTSERVER.txt file."
+
+      - name: Retrieve any cached dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-serverTest-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-serverTest-
 
       - name: Run test server
         uses: eskatos/gradle-command-action@v1
