Heavily revamped GH Actions workflows
- Build and Javadoc generation are now in two seperate steps
- The Minecraft Server is now tested in the latest versions of Windows Server, macOS, and Ubuntu.
- Fixed a possible bug where GH Actions would run on tag creation and not on release.
- The main workflow will now trigger at 12:00 on Mondays and Fridays to keep the cache fresh and prevent it from being auto-deleted.
- Each step now has a localized name.
- I will keep amending and force pushing this commit as needed until the result is successful.

--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -22,11 +22,13 @@ on:
     tags-ignore:
       - '*.*'
   release:
-    types: [created]
+    types: [prereleased, released]
+  schedule:
+    - cron: '0 12 * * 2,6'
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -42,24 +44,24 @@ jobs:
 
     - name: Prepare to build The Midnight
       env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
-          git clone git@github.com:${{ secrets.PRIVATE_REPO }}
-          echo "" >> gradle.properties
-          echo "mnKeyStore=${{ secrets.JKS_NAME }}" >> gradle.properties
-          echo "mnKeyStoreAlias=${{ secrets.JKS_ALIAS }}" >> gradle.properties
-          echo "mnKeyStorePass=${{ secrets.JKS_PASS }}" >> gradle.properties
-          echo "mnKeyStoreKeyPass=${{ secrets.JKS_PASS }}" >> gradle.properties
-          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightAPI/${{ secrets.JKS_NAME }}
-          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightCore/${{ secrets.JKS_NAME }}
-          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightMod/${{ secrets.JKS_NAME }}
-          rm -rf ${{ secrets.PRIVATE_REPO_NAME }}
-          echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-          echo "Ready to build and sign The Midnight!"
+        echo ""
+        mkdir -p ~/.ssh
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+        ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
+        git clone git@github.com:${{ secrets.PRIVATE_REPO }}
+        echo "" >> gradle.properties
+        echo "mnKeyStore=${{ secrets.JKS_NAME }}" >> gradle.properties
+        echo "mnKeyStoreAlias=${{ secrets.JKS_ALIAS }}" >> gradle.properties
+        echo "mnKeyStorePass=${{ secrets.JKS_PASS }}" >> gradle.properties
+        echo "mnKeyStoreKeyPass=${{ secrets.JKS_PASS }}" >> gradle.properties
+        cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightAPI/${{ secrets.JKS_NAME }}
+        cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightCore/${{ secrets.JKS_NAME }}
+        cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightMod/${{ secrets.JKS_NAME }}
+        rm -rf ${{ secrets.PRIVATE_REPO_NAME }}
+        echo "Ready to build and sign The Midnight."
 
     - name: Retrieve any cached dependencies
       uses: actions/cache@v2
@@ -75,7 +77,14 @@ jobs:
       uses: eskatos/gradle-command-action@v1
       with:
         gradle-version: 4.10.3
-        arguments: build javadoc --no-daemon
+        arguments: build --no-daemon
+
+    - name: Prepare to upload the build outputs
+      env:
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      run: |
+        echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        echo "Ready to upload the build output to GitHub."
 
     - name: Upload The Midnight API to GitHub
       uses: actions/upload-artifact@v2
@@ -85,14 +94,6 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightAPI/build/libs/*.jar
 
-    - name: Upload The Midnight API Documentation to GitHub
-      uses: actions/upload-artifact@v2
-      with:
-        # Artifact name
-        name: midnight-api-javadoc-${{ env.SHORT_SHA }}
-        # A file, directory or wildcard pattern that describes what to upload
-        path: MidnightAPI/build/docs/javadoc
-
     - name: Upload The Midnight Core to GitHub
       uses: actions/upload-artifact@v2
       with:
@@ -100,14 +101,6 @@ jobs:
         name: midnight-core-${{ env.SHORT_SHA }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightCore/build/libs/*.jar
-
-    - name: Upload The Midnight Core Documentation to GitHub
-      uses: actions/upload-artifact@v2
-      with:
-        # Artifact name
-        name: midnight-core-javadoc-${{ env.SHORT_SHA }}
-        # A file, directory or wildcard pattern that describes what to upload
-        path: MidnightCore/build/docs/javadoc
 
     - name: Upload The Midnight Client to GitHub
       uses: actions/upload-artifact@v2
@@ -133,17 +126,72 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightMod/build/libs/*universal*.jar
 
-    - name: Upload The Midnight Documentation to GitHub
-      uses: actions/upload-artifact@v2
-      with:
-        # Artifact name
-        name: midnight-javadoc-${{ env.SHORT_SHA }}
-        # A file, directory or wildcard pattern that describes what to upload
-        path: MidnightMod/build/docs/javadoc
-
-  test:
-
+  javadoc:
+    name: Javadoc Documentation
     runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: Update CI Workspace
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          java-package: jdk
+          architecture: x64
+
+      - name: Retrieve any cached dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Generate The Midnight Javadoc Documentation
+        uses: eskatos/gradle-command-action@v1
+        with:
+          gradle-version: 4.10.3
+          arguments: javadoc --no-daemon
+
+      - name: Prepare to upload the build outputs
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+          echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+          echo "Ready to upload the build output to GitHub."
+
+      - name: Upload The Midnight API Javadoc Documentation to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          # Artifact name
+          name: midnight-api-javadoc-${{ env.SHORT_SHA }}
+          # A file, directory or wildcard pattern that describes what to upload
+          path: MidnightAPI/build/docs/javadoc
+
+      - name: Upload The Midnight Core Javadoc Documentation to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          # Artifact name
+          name: midnight-core-javadoc-${{ env.SHORT_SHA }}
+          # A file, directory or wildcard pattern that describes what to upload
+          path: MidnightCore/build/docs/javadoc
+
+      - name: Upload The Midnight Javadoc Documentation to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          # Artifact name
+          name: midnight-javadoc-${{ env.SHORT_SHA }}
+          # A file, directory or wildcard pattern that describes what to upload
+          path: MidnightMod/build/docs/javadoc
+
+  testWindows:
+    name: Server Test (Windows Server)
+    runs-on: windows-latest
 
     steps:
       - name: Update CI workspace
@@ -156,8 +204,14 @@ jobs:
           java-package: jdk
           architecture: x64
 
-      - name: Set up test server
-        run: mkdir run/server; echo "eula=true" >> run/server/eula.txt; echo "Set eula to true."; echo "TEST FAILED" >> run/server/TESTSERVER.txt; echo "Generated TESTSERVER.txt file."
+      - name: Prepare to test a Minecraft Server with The Midnight
+        shell: pwsh
+        run: |
+          Write-Host "Generating the Minecraft Server's runtime environment..."
+          New-Item run/server -ItemType Directory -ea 0
+          "eula=true" | Out-File run/server/eula.txt
+          "TEST FAILED" | Out-File run/server/TESTSERVER.txt
+          Write-Host "Ready to test the Minecraft Server."
 
       - name: Retrieve any cached dependencies
         uses: actions/cache@v2
@@ -184,4 +238,111 @@ jobs:
 
       - name: Determine if server test was unsuccessful
         if: contains(steps.log.outputs.contents, 'TEST FAILED')
-        run: echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."; exit 1
+        shell: pwsh
+        run: |
+          Write-Host "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the `"Run test server`" step to see what went wrong."
+          exit 1
+
+  testMacOS:
+    name: Server Test (macOS)
+    runs-on: macos-latest
+
+    steps:
+      - name: Update CI workspace
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          java-package: jdk
+          architecture: x64
+
+      - name: Prepare to test a Minecraft Server with The Midnight
+        run: |
+          echo "Generating the Minecraft Server's runtime environment..."
+          mkdir run/server
+          echo "eula=true" >> run/server/eula.txt
+          echo "TEST FAILED" >> run/server/TESTSERVER.txt
+          echo "Ready to test the Minecraft Server."
+
+      - name: Retrieve any cached dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-serverTest-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-serverTest-
+
+      - name: Run test server
+        uses: eskatos/gradle-command-action@v1
+        continue-on-error: true
+        with:
+          gradle-version: 4.10.3
+          arguments: runTestServer --max-workers 1 -x downloadAssets
+
+      - name: Read server test result
+        id: log
+        uses: andstor/file-reader-action@v1
+        with:
+          path: run/server/TESTSERVER.txt
+
+      - name: Determine if server test was unsuccessful
+        if: contains(steps.log.outputs.contents, 'TEST FAILED')
+        run: |
+          echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."
+          exit 1
+
+  testLinux:
+    name: Server Test (Ubuntu)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Update CI workspace
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          java-package: jdk
+          architecture: x64
+
+      - name: Prepare to test a Minecraft Server with The Midnight
+        run: |
+          echo "Generating the Minecraft Server's runtime environment..."
+          mkdir run/server
+          echo "eula=true" >> run/server/eula.txt
+          echo "TEST FAILED" >> run/server/TESTSERVER.txt
+          echo "Ready to test the Minecraft Server."
+
+      - name: Retrieve any cached dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-serverTest-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-serverTest-
+
+      - name: Run test server
+        uses: eskatos/gradle-command-action@v1
+        continue-on-error: true
+        with:
+          gradle-version: 4.10.3
+          arguments: runTestServer --max-workers 1 -x downloadAssets
+
+      - name: Read server test result
+        id: log
+        uses: andstor/file-reader-action@v1
+        with:
+          path: run/server/TESTSERVER.txt
+
+      - name: Determine if server test was unsuccessful
+        if: contains(steps.log.outputs.contents, 'TEST FAILED')
+        run: |
+          echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."
+          exit 1
